--- a/src/locales/ar/translation.json
+++ b/src/locales/ar/translation.json
@@ -20,6 +20,47 @@
     "info": "معلومات",
     "logout": "تسجيل الخروج"
   },
+  "auth": {
+    "title": "مرحباً بك 👋 في نبض المدينة",
+    "subtitle": "اكتشف مدينتك",
+    "signup": "إنشاء حساب",
+    "login": "تسجيل الدخول",
+    "email": "البريد الإلكتروني",
+    "password": "كلمة المرور",
+    "confirmPassword": "تأكيد كلمة المرور",
+    "name": "الاسم الكامل",
+    "forgotPassword": "نسيت كلمة المرور؟",
+    "noAccount": "ليس لديك حساب؟",
+    "hasAccount": "لديك حساب بالفعل؟",
+    "signupHere": "إنشاء حساب هنا",
+    "loginHere": "تسجيل الدخول هنا",
+    "passwordMismatch": "كلمات المرور غير متطابقة",
+    "userExists": "المستخدم بهذا البريد الإلكتروني موجود بالفعل",
+    "invalidCredentials": "بريد إلكتروني أو كلمة مرور غير صحيحة",
+    "signupFailed": "فشل إنشاء الحساب. يرجى المحاولة مرة أخرى.",
+    "loginFailed": "فشل تسجيل الدخول. يرجى المحاولة مرة أخرى.",
+    "authCheckFailed": "فشل فحص المصادقة",
+    "emailPlaceholder": "أدخل بريدك الإلكتروني",
+    "passwordPlaceholder": "أدخل كلمة المرور",
+    "confirmPasswordPlaceholder": "أكد كلمة المرور",
+    "namePlaceholder": "أدخل اسمك الكامل",
+    "switchToSignup": "التبديل إلى إنشاء حساب",
+    "switchToLogin": "التبديل إلى تسجيل الدخول",
+    "validation": {
+      "emailRequired": "البريد الإلكتروني مطلوب",
+      "emailInvalid": "يرجى إدخال عنوان بريد إلكتروني صحيح",
+      "passwordRequired": "كلمة المرور مطلوبة",
+      "passwordLength": "يجب أن تكون كلمة المرور 8 أحرف على الأقل",
+      "passwordLowercase": "يجب أن تحتوي كلمة المرور على حرف صغير واحد على الأقل",
+      "passwordUppercase": "يجب أن تحتوي كلمة المرور على حرف كبير واحد على الأقل",
+      "passwordNumber": "يجب أن تحتوي كلمة المرور على رقم واحد على الأقل",
+      "passwordSpecial": "يجب أن تحتوي كلمة المرور على حرف خاص واحد على الأقل (@$!%*?&)",
+      "nameRequired": "الاسم مطلوب",
+      "nameLength": "يجب أن يكون الاسم حرفين على الأقل",
+      "confirmPasswordRequired": "يرجى تأكيد كلمة المرور",
+      "passwordsDoNotMatch": "كلمات المرور غير متطابقة"
+    }
+  },
   "navigation": {
     "home": "الرئيسية",
     "explore": "استكشاف",
