--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -20,6 +20,47 @@
     "info": "Information",
     "logout": "Logout"
   },
+  "auth": {
+    "title": "Welcome 👋 to City Pulse",
+    "subtitle": "Discover Your City",
+    "signup": "Sign Up",
+    "login": "Login",
+    "email": "Email",
+    "password": "Password",
+    "confirmPassword": "Confirm Password",
+    "name": "Full Name",
+    "forgotPassword": "Forgot Password?",
+    "noAccount": "Don't have an account?",
+    "hasAccount": "Already have an account?",
+    "signupHere": "Sign up here",
+    "loginHere": "Login here",
+    "passwordMismatch": "Passwords do not match",
+    "userExists": "User with this email already exists",
+    "invalidCredentials": "Invalid email or password",
+    "signupFailed": "Signup failed. Please try again.",
+    "loginFailed": "Login failed. Please try again.",
+    "authCheckFailed": "Authentication check failed",
+    "emailPlaceholder": "Enter your email",
+    "passwordPlaceholder": "Enter your password",
+    "confirmPasswordPlaceholder": "Confirm your password",
+    "namePlaceholder": "Enter your full name",
+    "switchToSignup": "Switch to Sign Up",
+    "switchToLogin": "Switch to Login",
+    "validation": {
+      "emailRequired": "Email is required",
+      "emailInvalid": "Please enter a valid email address",
+      "passwordRequired": "Password is required",
+      "passwordLength": "Password must be at least 8 characters long",
+      "passwordLowercase": "Password must contain at least one lowercase letter",
+      "passwordUppercase": "Password must contain at least one uppercase letter",
+      "passwordNumber": "Password must contain at least one number",
+      "passwordSpecial": "Password must contain at least one special character (@$!%*?&)",
+      "nameRequired": "Name is required",
+      "nameLength": "Name must be at least 2 characters long",
+      "confirmPasswordRequired": "Please confirm your password",
+      "passwordsDoNotMatch": "Passwords do not match"
+    }
+  },
   "navigation": {
     "home": "Home",
     "explore": "Explore",
