--- a/src/locales/ar/translation.json
+++ b/src/locales/ar/translation.json
@@ -18,7 +18,8 @@
     "success": "نجح",
     "warning": "تحذير",
     "info": "معلومات",
-    "logout": "تسجيل الخروج"
+    "logout": "تسجيل الخروج",
+    "share": "مشاركة"
   },
   "auth": {
     "title": "مرحباً بك 👋 في نبض المدينة",
@@ -165,5 +166,19 @@
     "capacity": "السعة",
     "register": "تسجيل",
     "share": "مشاركة الفعالية"
+  },
+  "detail": {
+    "description": "الوصف",
+    "location": "الموقع",
+    "getDirections": "احصل على الاتجاهات",
+    "call": "اتصال",
+    "share": "مشاركة",
+    "shareMessage": "مشاركة هذا العنصر",
+    "shared": "تمت المشاركة",
+    "sharedMessage": "تمت مشاركة العنصر بنجاح",
+    "error": "خطأ",
+    "cannotOpenMaps": "لا يمكن فتح تطبيق الخرائط",
+    "eventDetails": "تفاصيل الفعالية",
+    "tags": "العلامات"
   }
 }
