--- a/src/locales/ar/translation.json
+++ b/src/locales/ar/translation.json
@@ -73,6 +73,9 @@
     "title": "نبض المدينة",
     "subtitle": "اكتشف مدينتك",
     "searchPlaceholder": "ابحث عن الأماكن والفعاليات والمطاعم...",
+    "searchResults": "تم العثور على {{count}} نتيجة لـ \"{{query}}\"",
+    "searchVenues": "الأماكن",
+    "searchEvents": "الفعاليات",
     "categories": "الفئات",
     "restaurants": "مطاعم",
     "cafes": "مقاهي",
