--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -73,6 +73,9 @@
     "title": "City Pulse",
     "subtitle": "Discover Your City",
     "searchPlaceholder": "Search places, events, restaurants...",
+    "searchResults": "Found {{count}} results for \"{{query}}\"",
+    "searchVenues": "Venues",
+    "searchEvents": "Events",
     "categories": "Categories",
     "restaurants": "Restaurants",
     "cafes": "Cafes",
